--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "tsc" : "tsc",
     "storybook": "start-storybook -p 6006 -s ./public",
     "build-storybook": "build-storybook s public"
   },
