--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "build-storybook s public"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
