--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "tsc" : "tsc",
+    "tsc": "tsc",
     "storybook": "start-storybook -p 6006 -s ./public",
     "build-storybook": "build-storybook s public"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
     "@tanstack/react-query": "^4.14.1",
     "axios": "^1.1.3",
+    "emotion-reset": "^3.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
+    "@emotion/babel-plugin": "^11.10.5",
     "@storybook/addon-a11y": "^6.5.13",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
@@ -31,8 +34,8 @@
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.5.0",
-    "@tanstack/react-query-devtools": "^4.14.1",
     "@tanstack/eslint-plugin-query": "^4.14.2",
+    "@tanstack/react-query-devtools": "^4.14.1",
     "@types/node": "18.11.5",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
