--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "recoil": "^0.7.6"
   },
   "devDependencies": {
