--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@emotion/styled": "^11.10.5",
     "@tanstack/react-query": "^4.14.1",
     "axios": "^1.1.3",
+    "chart.js": "^4.2.0",
     "emotion-reset": "^3.0.1",
     "framer-motion": "^7.6.6",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-pdf": "^6.2.2",
