--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^4.14.1",
     "axios": "^1.1.3",
     "chart.js": "^4.2.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "emotion-reset": "^3.0.1",
     "framer-motion": "^7.6.6",
     "next": "12.3.1",
