--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "tsc": "tsc",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook s public"
+    "build-storybook": "build-storybook s public",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -17,8 +18,8 @@
     "@tanstack/react-query": "^4.14.1",
     "axios": "^1.1.3",
     "chart.js": "^4.2.0",
-    "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-chart-wordcloud": "^4.1.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "emotion-reset": "^3.0.1",
     "framer-motion": "^7.6.6",
     "next": "12.3.1",
@@ -62,8 +63,17 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-storybook": "^0.6.6",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "prettier": "^2.7.1",
     "storybook-addon-next": "^1.6.9",
     "typescript": "4.8.4"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "next lint --fix",
+      "tsc",
+      "prettier --write"
+    ]
   }
 }
