:sparkles: Feat: 매거진 제작 시 페이지 삭제 기능

--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
-      "next lint --fix",
-      "tsc",
+      "eslint --fix",
       "prettier --write"
     ]
   }
